--- a/css/main.css
+++ b/css/main.css
@@ -5,14 +5,12 @@ html, body {
     overflow: hidden;
 }
 
-#gantt_here, .gantt_container {
+.tbl{
+    display: table;
+    width:100%;
 }
-
-.gantt_grid, .gantt_task {
-}
-
-.gantt_grid_data, .gantt_ver_scroll {
-    height: auto;
+.tbl_cell{
+    display: table-cell;
 }
 
 #app-content {
@@ -44,11 +42,6 @@ html, body {
     height:100%;
 }
 
-#gantt-chart {
-    background-color: #FFF;
-    width:100%;
-    height:100%;
-}
 
 .child_preview {
     box-sizing: border-box;
@@ -59,39 +52,6 @@ html, body {
     text-align: center;
     font-size: 12px;
 }
-
-.gantt_task_line.task-collapsed {
-    height: 4px;
-    opacity: 0.25;
-}
-
-.gantt_task_line.gantt_project.task-collapsed .gantt_task_content {
-    display: none;
-}
-
-.gantt_row.task-parent {
-    font-weight: bold;
-}
-
-#gantt_sidebar {
-    display: none;
-    position: absolute;
-    padding: 10px;
-    width: 260px;
-    height: 98%;
-    background-color: #fff;
-    z-index: 999;
-    right: 0;
-    border-left: 1px solid #EBEBEB;
-}
-
-.gantt_cal_light {
-    border-radius: 0 !important;
-    font-family: 'Open Sans', Frutiger, Calibri, 'Myriad Pro', Myriad, sans-serif !important;
-    color: #6b6b6b;
-    box-shadow: 0 0 15px -3px rgba(0, 0, 0, .8) !important;
-}
-
 .sidebar_loader {
     display: block;
     text-align: center;
@@ -123,11 +83,11 @@ html, body {
     float: right;
 }
 
-#sidebar_wrapper {
+#sidebar-wrapper {
     padding: 10px;
 }
 
-#sidebar_wrapper h3 {
+#sidebar-wrapper h3 {
     font-size: 110%;
     font-weight: bold;
 }
@@ -155,7 +115,8 @@ html, body {
 
 #sidebar_content_2 .tbl_cell {
     text-align: center;
-    width: 20%
+    width: 20%;
+    cursor: pointer;
 }
 
 #sidebar_content_2 img {
@@ -167,8 +128,21 @@ html, body {
     border-bottom: 2px solid #000;
 }
 
-#chart_share {
+#sidebar_locker {
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.75);
+    display: block;
+    width: 100%;
+    height: 100%;
 }
+#sidebar_locker img{
+    display: block;
+    text-align: center;
+    vertical-align: baseline;
+    margin: 40% auto;
+}
+
+#chart_share {}
 
 #chart_share input[type=text] {
     width: 100%
@@ -177,7 +151,13 @@ html, body {
 .txt_right {
     text-align: right;
 }
-
+#app-content-inline-error{
+    display: none;
+    color: #fff;
+    background-color: #ff0200;
+    font-weight: bold;
+    padding: 2px 10px 3px;
+}
 #app-lbox {
     display: none;
     position: absolute;
@@ -279,6 +259,46 @@ html, body {
 }
 
 #chart_gantt_zoom_slider {
+}
+
+#gantt-chart {
+    background-color: #FFF;
+    width:100%;
+    height:100%;
+}
+.gantt_grid_data, .gantt_ver_scroll {
+    height: auto;
+}
+.gantt_task_line.task-collapsed {
+    height: 4px;
+    opacity: 0.25;
+}
+
+.gantt_task_line.gantt_project.task-collapsed .gantt_task_content {
+    display: none;
+}
+
+.gantt_row.task-parent {
+    font-weight: bold;
+}
+
+#gantt_sidebar {
+    display: none;
+    position: absolute;
+    padding: 10px;
+    width: 260px;
+    height: 98%;
+    background-color: #fff;
+    z-index: 999;
+    right: 0;
+    border-left: 1px solid #EBEBEB;
+}
+
+.gantt_cal_light {
+    border-radius: 0 !important;
+    font-family: 'Open Sans', Frutiger, Calibri, 'Myriad Pro', Myriad, sans-serif !important;
+    color: #6b6b6b;
+    box-shadow: 0 0 15px -3px rgba(0, 0, 0, .8) !important;
 }
 
 .gantt_zoom_line .ui-slider-horizontal {
