--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,10 @@ html, body {
     display: table-cell;
 }
 
+.tbl_row{
+    display: table-row;
+}
+
 #app-content {
     background-color: #EEEEEE;
     height:100%;
@@ -158,6 +162,8 @@ html, body {
     font-weight: bold;
     padding: 2px 10px 3px;
 }
+#app-lbox {display: none;}
+/*
 #app-lbox {
     display: none;
     position: absolute;
@@ -195,18 +201,35 @@ html, body {
 
 #lbox_progress {
     width: 100px;
-}
-
-.lbox-popup {
-    display: none;
-    box-shadow: 0 5px 15px -1px rgba(0, 0, 0, 0.65);
+}*/
+/**/
+.gantt_cal_ltitle{display:none}
+.gantt_cal_lsection{display:none}
+.lbox_popup {
+    box-shadow: 0 1px 4px -1px rgba(0, 0, 0, 0.65);
     position: absolute;
-    width: 89%;
+    width: 90%;
+    min-height: 100px;
     padding: 0 10px 10px 10px;
     background-color: #fff;
 }
+.lbox_popup_close{
+    display: inline-block;
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    left: 100%;
+    padding-left: -20px;
+    margin-left: -20px;
+    margin-top: 3px;
+}
+.lbox_popup_wrap{
 
-#on_task_add, #on_task_remove, #on_task_edit {
+}
+
+
+/*task_control_btn icon_*/
+.task_control_btn {
     display: inline-block;
     margin-top: 3px;
     margin-left: -3px;
@@ -214,15 +237,15 @@ html, body {
     height: 16px;
 }
 
-#on_task_add {
+.icon_add {
     background: url('/apps/owncollab/img/add-color.png') no-repeat center center;
 }
 
-#on_task_remove {
+.icon_remove {
     background: url('/apps/owncollab/img/delete-color.png') no-repeat center center;
 }
 
-#on_task_edit {
+.icon_edit {
     background: url('/apps/owncollab/img/drafts.png') no-repeat center center;
 }
 
