--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,12 @@ html, body {
     width: 100%;
     height: 30px;
 }
+#sortedfilters{
+    display: inline-block;
+}
+#sortedfilters>span{
+    display: inline-block;
+}
 
 #sidebar-toggle {
     display: inline-block;
