--- a/css/main.css
+++ b/css/main.css
@@ -394,31 +394,9 @@ html, body {
     padding: 0px;
     margin: 0;
 }
-.gantt_scale_0{
-    zoom: 1;
-    -moz-transform: scale(1);
+#gantt_filter_name, #gantt_filter_group{
+    width: 100%;
 }
-.gantt_scale_1{
-    zoom: 1.1;
-    -moz-transform: scale(1.1);
-}
-.gantt_scale_2{
-    zoom: 1.2;
-    -moz-transform: scale(1.2);
-}
-.gantt_scale_3{
-    zoom: 1.3;
-    -moz-transform: scale(1.3);
-}
-.gantt_scale_4{
-    zoom: 1.4;
-    -moz-transform: scale(1.4);
-}
-.gantt_scale_5{
-    zoom: 1.5;
-    -moz-transform: scale(1.5);
-}
-
 
 
 
