--- a/css/dhtmlxgantt.css
+++ b/css/dhtmlxgantt.css
@@ -661,8 +661,10 @@ div.dhx_modal_cover {
     top: 0;
     position: absolute;
     white-space: nowrap;
-    text-align: center
+    text-align: left;
+    padding-left: 8px;
 }
+
 
 .gantt_task_progress {
     text-align: center;
