--- a/css/main.css
+++ b/css/main.css
@@ -226,17 +226,16 @@ html, body {
 .lbox_popup_close{
     display: inline-block;
     position: absolute;
-    width: 16px;
-    height: 16px;
+    width: 18px;
+    height: 18px;
     left: 100%;
     padding-left: -20px;
     margin-left: -20px;
     margin-top: 3px;
+    background-color: #fff;
 }
 .lbox_popup_wrap{
-    padding-top: 10px;
-    max-height: 200px;
-    overflow-y: auto;
+
 }
 
 
@@ -386,7 +385,8 @@ html, body {
 }
 
 .predecessor_line {
-    width: 95%;
+    width: 99%;
+    border-bottom: 1px solid RGB(240, 240, 240);
 }
 .predecessor_line .tbl_cell:first-child{
 
@@ -424,7 +424,59 @@ html, body {
     width: 14px !important;
 }
 
+.gantt_save_btn_set>div:first-child, .gantt_cancel_btn_set>div:first-child, .gantt_delete_btn_set>div:first-child{
+    display: none;
+}
 
+.gantt_btn_set{
+    font-size: 110px;
+}
+.gantt_btn_set div {
+    font-size: 14px !important;
+    font-family: 'Arial', sans-serif;
+}
+.gantt_cal_larea{
+    border: none !important;
+}
+.gantt_btn_set.gantt_cancel_btn_set {
+    padding: 0px 15px 0px 10px;
+    float: left;
+    background-color: #fff !important;
+    border: 3px solid #F2F2F2 !important;
+}
+.gantt_btn_set.gantt_save_btn_set {
+    padding: 0px 15px 0px 10px;
+    float: left;
+    background-color: #F2F2F2 !important;
+    border: 3px solid #F2F2F2 !important;
+}
+.gantt_btn_set.gantt_delete_btn_set {
+    padding: 0px 15px 0px 10px;
+    float: left;
+    background-color: #fff !important;
+    border: 3px solid #f00 !important;
+    color: #f00;
+}
+#generate-lbox-wrapper input[type=text]{
+    border-radius: 0;
+    border: 1px solid #BDBDBD;
+    font-size: 12px;
+}
+#generate-lbox-wrapper>div:nth-child(1) input[name=lbox_text]{
+    width: 515px;
+}
+#generate-lbox-wrapper>div:nth-child(2) input[name=lbox_users]{
+    width: 515px;
+}
+#generate-lbox-wrapper>div:nth-child(n+3)>div:nth-child(odd){
+    width: 10%;
+    text-align: right;
+}
+.lbox_title {
+    font-size: 13px;
+    color: #000;
+    padding-right: 15px;
+}
 
 
 
