--- a/css/main.css
+++ b/css/main.css
@@ -139,19 +139,19 @@ html, body {
     display: none;
 }
 
-#sidebar_content_2 .tbl_cell {
+#sidebar_content_2 > .tbl > .tbl_cell {
     text-align: center;
     width: 20%;
-    cursor: pointer;
+    border-bottom: 2px solid #fff;
+}
+
+#sidebar_content_2 > .tbl > .tbl_cell:hover {
+    border-bottom: 2px solid #000;
 }
 
 #sidebar_content_2 img {
     width: 36px;
     height: 36px;
-}
-
-#sidebar_content_2 .tbl_cell:hover {
-    border-bottom: 2px solid #000;
 }
 
 #sidebar_locker {
@@ -167,6 +167,41 @@ html, body {
     vertical-align: baseline;
     margin: 40% auto;
 }
+
+.sidebar_line{
+    width: 100%;
+    height: 2px;
+    display: block;
+    background-color: #BDBDBD;
+    margin: 20px 0 10px;
+}
+
+.sidebar_line_arrow{
+    width: 15px;
+    height: 15px;
+    display: block;
+    position: absolute;
+    transform: rotate(45deg);
+    margin-left: 108px;
+    background-color: #fff;
+    border: 2px solid #BDBDBD;
+    border-bottom: none;
+    border-right: none;
+    margin-top: -7px;
+}
+
+
+#sidebar-content input[type=text]{
+    border-radius: 0;
+    border: 1px solid #BDBDBD;
+    font-size: 12px;
+}
+
+
+
+
+
+
 
 #chart_share {}
 
