--- a/css/main.css
+++ b/css/main.css
@@ -5,17 +5,11 @@ html, body {
     overflow: hidden;
 }
 
-.tbl{
-    display: table;
-    width:100%;
-}
-.tbl_cell{
-    display: table-cell;
-}
+.tbl{display: table; width:100%;}
+.tbl_cell{display: table-cell;}
+.tbl_row{display: table-row;}
+.width1{width: 1%}.width2{width: 2%}.width3{width: 3%}.width4{width: 4%}.width5{width: 5%}.width10{width: 10%}.width15{width: 15%}.width20{width: 20%}.width25{width: 25%}.width30{width: 30%}.width35{width: 35%}.width40{width: 40%}.width45{width: 45%}.width50{width: 50%}.width55{width: 55%}.width60{width: 60%}.width65{width: 65%}.width70{width: 70%}.width75{width: 75%}.width80{width: 80%}.width85{width: 85%}.width90{width: 90%}.width95{width: 95%}.width96{width: 96%}.width97{width: 97%}.width98{width: 98%}.width99{width: 99%}.width100{width: 100%}
 
-.tbl_row{
-    display: table-row;
-}
 
 #app-content {
     background-color: #EEEEEE;
@@ -192,6 +186,7 @@ html, body {
 
 
 #sidebar-content input[type=text]{
+    width: 100%;
     border-radius: 0;
     border: 1px solid #BDBDBD;
     font-size: 12px;
