--- a/css/main.css
+++ b/css/main.css
@@ -287,6 +287,7 @@ html, body {
 .lbox_popup_wrap{
     overflow-y: hidden;
     overflow-x: hidden;
+    color: #4D4D4D;
 }
 
 
@@ -529,7 +530,62 @@ html, body {
     padding-right: 15px;
 }
 
+.lbox_popup_wrap strong{
+    font-weight: bold !important;
+}
+input[type="checkbox"] {
+    display:none;
+}
 
+input[type="checkbox"] + label {
+    /*color:#f2f2f2;*/
+    /*font-family:Arial, sans-serif;*/
+    /*font-size:14px;*/
+    margin-right: 8px;
+}
+
+input[type="checkbox"] + label span {
+    display:inline-block;
+    width:19px;
+    height:19px;
+    margin:0px 0px 0 0;
+    vertical-align:middle;
+    /*background:url(/apps/owncollab_chart/img/check_radio_sheet.png) left top no-repeat;*/
+    background:url(/apps/owncollab_chart/img/checkbox.png) left top no-repeat;
+    cursor:pointer;
+}
+
+input[type="checkbox"]:checked + label span {
+    /*background:url(/apps/owncollab_chart/img/check_radio_sheet.png) -19px top no-repeat;*/
+    background:url(/apps/owncollab_chart/img/checkbox-checked.png) left top no-repeat;
+}
+
+
+input[type="radio"] {
+    display:none;
+}
+
+input[type="radio"] + label {
+    /*color:#f2f2f2;*/
+    /*font-family:Arial, sans-serif;*/
+    /*font-size:14px;*/
+}
+
+input[type="radio"] + label span {
+    display:inline-block;
+    width:19px;
+    height:19px;
+    margin:-1px 4px 0 0;
+    vertical-align:middle;
+    /*background:url(/apps/owncollab_chart/img/check_radio_sheet.png) -38px top no-repeat;*/
+    background:url(/apps/owncollab_chart/img/checkbox.png) left top no-repeat;
+    cursor:pointer;
+}
+
+input[type="radio"]:checked + label span {
+    /*background:url(/apps/owncollab_chart/img/check_radio_sheet.png) -57px top no-repeat;*/
+    background:url(/apps/owncollab_chart/img/checkbox-checked.png) left top no-repeat;
+}
 
 
 
