--- a/css/main.css
+++ b/css/main.css
@@ -685,6 +685,8 @@ input[type="radio"]:checked + label span {
 
 #act_undo, #act_redo{
     visibility: hidden;
+}
+#act_undo img, #act_redo img{
     cursor: pointer;
 }
 
