--- a/css/main.css
+++ b/css/main.css
@@ -355,7 +355,7 @@ html, body {
     background-color: #FFF;
     /*position: absolute;*/
     width:100%;
-    height:100%;
+    height: calc(100% - 58px);
 }
 .gantt_grid_data, .gantt_ver_scroll {
     height: auto;
