--- a/css/dhtmlxgantt.css
+++ b/css/dhtmlxgantt.css
@@ -6,6 +6,9 @@ This software is covered by GPL license. You also can obtain Commercial or Enter
 
 (c) Dinamenta, UAB.
 */
+
+*{font-family: "Open Sans", Arial, sans-serif;}
+
 .gridHoverStyle, .gridSelection, .timelineSelection {
     background-color: #fff3a1
 }
