--- a/css/dhtmlxgantt.css
+++ b/css/dhtmlxgantt.css
@@ -7,7 +7,10 @@ This software is covered by GPL license. You also can obtain Commercial or Enter
 (c) Dinamenta, UAB.
 */
 
-*{font-family: "Open Sans", Arial, sans-serif;}
+*{
+    font-family: "Open Sans", Arial, sans-serif;
+    font-size: 11px;
+}
 
 .gridHoverStyle, .gridSelection, .timelineSelection {
     background-color: #fff3a1
