--- a/css/main.css
+++ b/css/main.css
@@ -382,7 +382,11 @@ b, strong { font-weight: 600 !important }
 .gantt_row.task-parent {
     font-weight: bold;
 }
-
+.gantt_side_content.gantt_right {
+    bottom: 0px !important;
+    color: #1c2c42;
+    font-weight: bold;
+}
 
 .gantt_modal_box{
     border-radius: 0 !important;
