--- a/css/main.css
+++ b/css/main.css
@@ -298,7 +298,8 @@ b, strong { font-weight: 600 !important }
     background-color: #fff;
 }
 .lbox_popup_wrap{
-    overflow-y: hidden;
+    max-height: 400px;
+    overflow-y: auto;
     overflow-x: hidden;
     color: #4D4D4D;
     padding-top: 10px;
